--- a/phresco-framework-web/src/main/webapp/theme/photon/css/photon_theme.css
+++ b/phresco-framework-web/src/main/webapp/theme/photon/css/photon_theme.css
@@ -1112,12 +1112,12 @@ label {
 /*** loading image starts ***/
 #indicator {
 /* 	background-image:url("../images/pggreen.png"); */
-	background-color: #C1131C;
+	background-color: #39bc67;
 	color: #FFFFFF;
 }
 
 #progressbar {
-  	border:1px solid #C1131C;
+  	border:1px solid #2e9d55;
   	color: #FFFFFF;
 }
 /*** loading image ends ***/
@@ -1431,13 +1431,7 @@ label {
 } */
 
 #indicator {
-	background: #C7141C; /* Old browsers */
-    background: -moz-linear-gradient(top,  #C7141C 0%, #B1121D 44%, #9D111E 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#C7141C), color-stop(44%,#B1121D), color-stop(100%,#9D111E)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  #C7141C 0%,#B1121D 44%,#9D111E 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  #C7141C 0%,#B1121D 44%,#9D111E 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  #C7141C 0%,#B1121D 44%,#9D111E 100%); /* IE10+ */
-	background: linear-gradient(top,  #C7141C 0%,#B1121D 44%,#9D111E 100%); /* W3C */
+	background: #39BC67; /* Old browsers */
 }
 
 .table_border {
